--- a/file.html
+++ b/file.html
@@ -5,8 +5,8 @@
   <title>My First HTML Page</title>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is a paragraph of text.</p>
+  <h1>Greetings, Welcome to My Website</h1>
+  <p>This is a para of text.</p>
   <ul>
     <li>First item</li>
     <li>Second item</li>
