--- a/file2.html
+++ b/file2.html
@@ -1,9 +1,9 @@
 <DOCTYPE html>
 <html>
    <head>
-	<title>first page</title>
+	<title>first page updated</title>
    </head>
    <body>
-	<h1>hello world!</h1>
+	<h1>hello world!, this is new era</h1>
    </body>
 </html>
